testdata/baselines/reference/submodule/compiler/jsFileMethodOverloads3.errors.txt
/a.js(15,13): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== /a.js (1 errors) ====
    /**
     * @overload
     * @param {number} x
     */
    
    /**
     * @overload
     * @param {string} x
     */
    
    /**
     * @param {string | number} x
     * @returns {string | number}
     */
    function id(x) {
                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        return x;
    }
    
    export let a = id(123);
    export let b = id("hello");
    